Fixed column alignment again

--- a/Restaurant site/restaurantStyles.css
+++ b/Restaurant site/restaurantStyles.css
@@ -24,11 +24,6 @@ label{
     text-align: right;
 }
 
-input {
-  display: inline-block;
-  float: left;
-}
-
 
 
 
